Changed the location of Content (like styles, fonts, and images) to their own folder. Ignored the bundles that are generated via gulp (they're cleaned up anyway when the task runner fires).

--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,13 @@ _Pvt_Extensions
 
 # Bower Components
 bower_components/
+
+# Bundled items generated through gulp
+/BroadvineOnboard/Content/styles/app.min.css
+/BroadvineOnboard/Content/styles/app.min.css.map
+/BroadvineOnboard/Scripts/bootstrap-bundle.min.js
+/BroadvineOnboard/Scripts/bootstrap-bundle.min.js.map
+/BroadvineOnboard/Scripts/jquery-bundle.min.js
+/BroadvineOnboard/Scripts/jquery-bundle.min.js.map
+/BroadvineOnboard/Scripts/kendo-bundle.min.js
+/BroadvineOnboard/Scripts/kendo-bundle.min.js.map
