--- a/BroadvineOnboard/Web.config
+++ b/BroadvineOnboard/Web.config
@@ -9,8 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BroadvineOnboard8-20151125092050.mdf;Initial Catalog=aspnet-BroadvineOnboard8-20151125092050;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="BroadvineOnboardContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=BroadvineOnboard8;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\xaspnet-BroadvineOnboard8-0816A.mdf;Initial Catalog=xaspnet-BroadvineOnboard8-0816A;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="BroadvineOnboardContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=BroadvineOnboard0816;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />-->
+    <add name="BroadvineOnboardContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\xaspnet-BroadvineOnboardContext-0816A.mdf;Initial Catalog=xBroadvineOnboardContext-0816A;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
