--- a/BroadvineOnboard/packages.config
+++ b/BroadvineOnboard/packages.config
@@ -25,6 +25,7 @@
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="OpenXMLSDK-MOT" version="2.6.0.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
