BV-861 Added dropdown mappings for 'Areas'

--- a/.gitignore
+++ b/.gitignore
@@ -247,3 +247,4 @@ bower_components/
 /BroadvineOnboard/Scripts/jquery-bundle.min.js.map
 /BroadvineOnboard/Scripts/kendo-bundle.min.js
 /BroadvineOnboard/Scripts/kendo-bundle.min.js.map
+/BroadvineOnboard/App_Data/Uploads
