--- a/BroadvineOnboard/BroadvineOnboard.csproj
+++ b/BroadvineOnboard/BroadvineOnboard.csproj
@@ -397,6 +397,8 @@
     <Content Include="Views\Departments\Import.cshtml" />
     <Content Include="Views\Companies\Import.cshtml" />
     <Content Include="Views\Companies\Worksheet.cshtml" />
+    <Content Include="Views\Areas\Import.cshtml" />
+    <Content Include="Views\Areas\Worksheet.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201512022314083_db.resx">
