--- a/BroadvineOnboard/BroadvineOnboard.csproj
+++ b/BroadvineOnboard/BroadvineOnboard.csproj
@@ -234,7 +234,6 @@
     <Compile Include="Controllers\WagePTEBController.cs" />
     <Compile Include="DAL\BroadvineOnboardContext.cs" />
     <Compile Include="DAL\BroadvineOnboardInitializer.cs" />
-    <Compile Include="AddOns\MultipleButtonAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -404,6 +403,7 @@
     <Content Include="Views\DepartmentGroups\Import.cshtml" />
     <Content Include="Views\COA\Import.cshtml" />
     <Content Include="Views\COA\Worksheet.cshtml" />
+    <Content Include="Views\Property\Wizard.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201512022314083_db.resx">
